@@ -38,6 +38,7 @@ Maintenance
 
 * Fix generation of DICOMDIR if PatientID is empty
 * Fix issue 25 (Deadlock with Lua scripts): The event queue is now implemented for Lua
+* Configuration option "LogExportedResources" is now "false" by default
 * Upgraded dependencies for static and Windows builds:
   - boost 1.67.0
 
